--- a/ui/templates/campaign_detail.html
+++ b/ui/templates/campaign_detail.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}{{ campaign.name }} - Campaign Details{% endblock %}
+{% block title %}Campaign Manager{% endblock %}
 
 {% block content %}
 <div class="container">
